Created ServerModule1 and Form1; Edited settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,7 +1,9 @@
 unique_ids:
   assets:
     theme.css: 6G44GIEQQRJLILWU6GQSQO5BTDFT5ZI3
-  forms: {}
+  forms:
+    Form1: '1731182004253401128143686.458'
   modules: {}
   scripts: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1731182515675779552670771.0345'
